--- a/Spice/Spice/Areas/Admin/Views/Category/Index.cshtml
+++ b/Spice/Spice/Areas/Admin/Views/Category/Index.cshtml
@@ -4,5 +4,43 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<br/><br/>
+<div class="border background-white">
+    <div class="row">
+        <div class="col-6">
+            <h2 class="text-info">Category List</h2>
+        </div>
+        <div class="col-6 text-right">
+            <partial name="_CreateButtonPartial"/>
+        </div>
+    </div>
+    <br/><br/>
+    <div>
+        @if (Model.Count() > 0)
+        {
+        <table class="table table-striped border">
+            <tr class="table-secondary">
+                <th>@Html.DisplayNameFor(m => m.Name)</th>
+                <th></th>
+                <th></th>
+            </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(m => item.Name)
+                    </td>
+                    <td>
+                        <partial name="_TableButtonsPartial" model="item.Id" />
+                    </td>
+                </tr>
+            }
+        </table>
+        }
+        else
+        {
+            <p>No Categories Exist...</p>
+        }
+    </div>
+</div>
 
