--- a/Spice/Spice/Views/Shared/_Layout.cshtml
+++ b/Spice/Spice/Views/Shared/_Layout.cshtml
@@ -6,8 +6,9 @@
     <title>@ViewData["Title"] - Spice</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="https://kit.fontawesome.com/351559b76f.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="search-background">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
