--- a/Spice/Spice/Areas/Admin/Views/Category/Edit.cshtml
+++ b/Spice/Spice/Areas/Admin/Views/Category/Edit.cshtml
@@ -22,12 +22,15 @@
         </div>
         <div class="form-group row">
             <div class="col-5 offset-4">
-                <partial name="_EditAndReturnButton" model="Model.Id"/>
+                <partial name="_EditAndReturnButton" model="Model.Id" />
             </div>
 
         </div>
     </div>
 </form>
 
+@section Scripts{
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
 
 
