--- a/Spice/Spice/Areas/Admin/Views/MenuItem/Delete.cshtml
+++ b/Spice/Spice/Areas/Admin/Views/MenuItem/Delete.cshtml
@@ -45,7 +45,7 @@
                         <label asp-for="MenuItem.CategoryId" class="col-form-label"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="MenuItem.CategoryId" class="form-control" type="text" />
+                        <input asp-for="MenuItem.Category.Name" class="form-control" type="text" />
                     </div>
 
 
