--- a/Spice/Spice/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Spice/Spice/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Spice.Utility
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
@@ -86,10 +87,27 @@
                 <label asp-for="Input.ConfirmPassword" class="col-form-label font-weight-bolder"></label>
             </div>
             <div class="col-5">
-                    <input asp-for="Input.ConfirmPassword" class="form-control" />
-                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                <input asp-for="Input.ConfirmPassword" class="form-control" />
+                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
         </div>
+
+        @if (User.IsInRole(SD.ManagerUser))
+        {
+            <div class="form-group row">
+                <div class="col-2">
+                </div>
+                <div class="col-5">
+                    <input type="radio" name="rdUserRole" value="@SD.KitchenUser" checked /> @SD.KitchenUser
+                    <input type="radio" name="rdUserRole" value="@SD.ManagerUser"  /> @SD.ManagerUser
+                    <input type="radio" name="rdUserRole" value="@SD.FrontDeskUser"  /> @SD.FrontDeskUser
+                </div>
+            </div>
+
+        }
+
+
+
         <div class="form-group row">
             <div class="col-5 offset-4">
                 <button type="submit" class="btn btn-primary">Register</button>
