--- a/Spice/Spice/Areas/Admin/Views/User/Index.cshtml
+++ b/Spice/Spice/Areas/Admin/Views/User/Index.cshtml
@@ -25,24 +25,38 @@
                     <th>@Html.DisplayNameFor(m => m.Email)</th>
                     <th>@Html.DisplayNameFor(m => m.PhoneNumber)</th>
                     <th></th>
-                    <th></th>
                 </tr>
                 @foreach (var item in Model)
                 {
-            <tr>
-                <td>
-                    @Html.DisplayFor(m => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.PhoneNumber)
-                </td>
-                <td>
-                    <a class="btn btn-success text-white" asp-action="Lock" asp-route-id="@item.Id"><i class="fas fa-lock-open"></i></a>
-                </td>
-            </tr>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(m => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(m => item.Email)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(m => item.PhoneNumber)
+                        </td>
+                        <td>
+                            @if (item.LockoutEnd == null || item.LockoutEnd < DateTime.Now)
+                            {
+                                <a class="btn btn-success text-white" asp-action="Lock" asp-route-id="@item.Id">
+                                    <i class="fas fa-lock-open"></i>
+                                </a>
+                            }
+                            else
+                            {
+                                <a class="btn btn-danger text-white" asp-action="Unlock" asp-route-id="@item.Id">
+                                    <i class="fas fa-lock"></i>
+                                </a>
+                            }
+
+
+
+                        </td>
+                        
+                    </tr>
                 }
             </table>
         }
