--- a/Spice/Spice/Areas/Customer/Views/Home/Details.cshtml
+++ b/Spice/Spice/Areas/Customer/Views/Home/Details.cshtml
@@ -78,7 +78,7 @@
                     <label asp-for="Count" class="text-info font-weight-bold"></label>
                 </div>
                 <div class="col-md-8">
-                    <input asp-for="Count" readonly class="form-control" type="text" />
+                    <input asp-for="Count"  class="form-control" type="number" />
                 </div>
                 <span asp-validation-for="Count" class="text-danger"></span>
             </div>
