--- a/Spice/Spice/Areas/Customer/Views/Cart/Index.cshtml
+++ b/Spice/Spice/Areas/Customer/Views/Cart/Index.cshtml
@@ -68,7 +68,7 @@
                                 </div>
                                 <div class="col-5 mt-2">
                                     <button type="submit" class="btn btn-sm form-control btn-outline-success" id="btnCoupon" asp-action="AddCoupon">Apply</button>
-                                    <button type="submit" class="btn btn-sm form-control btn-outline-success" id="btnRemoveCoupon" style="display:none" asp-action="RemoveCoupon">remove</button>
+                                    <button type="submit" class="btn btn-sm form-control btn-outline-danger" id="btnRemoveCoupon" style="display:none" asp-action="RemoveCoupon">Remove</button>
                                 </div>
                             </div>
                         </div>
@@ -96,4 +96,18 @@
         <div class="backgroundWhiteBorder">No items added to the shopping cart....</div>
     }
 </form>
+@section Scripts{ 
+<script>
+    $(function (){
+        var couponCode = document.getElementById("txtCouponCode").value;
 
+        if (couponCode.length > 0) {
+            document.getElementById('btnCoupon').style.display = 'none';
+            document.getElementById('btnRemoveCoupon').style.display = '';
+        } else {
+            document.getElementById('btnCoupon').style.display = '';
+            document.getElementById('btnRemoveCoupon').style.display = 'none';
+        }
+    });
+</script>
+}
