--- a/Spice/Spice/Views/Shared/_Layout.cshtml
+++ b/Spice/Spice/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]  Spice</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.css" />
+    <link rel="stylesheet" href="~/css/jquery-ui.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="https://kit.fontawesome.com/351559b76f.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tiny.cloud/1/4jok4uc8gxy97eytyxqqlhp9goq84vrea8xus3cnm2mo4vji/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
@@ -79,6 +81,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/jquery-ui.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
