--- a/Spice/Spice/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/Spice/Spice/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Spice.Models.ViewModels.OrderDetailsCart
+@using Microsoft.Extensions.Options
+@inject IOptions<Spice.Utility.StripeSettings> Stripe
 @{
     ViewData["Title"] = "Summary";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -37,7 +39,7 @@
                                             <label>Name:</label>
                                         </div>
                                         <div class="col-9">
-                                            <input asp-for="@Model.OrderHeader.PickupName" type="text" class="form-control" />
+                                            <input asp-for="@Model.OrderHeader.PickupName"  id="txtName" type="text" class="form-control" />
                                         </div>
                                     </div>
                                     <div class="row my-1">
@@ -45,7 +47,7 @@
                                             <label>Phone Number:</label>
                                         </div>
                                         <div class="col-9">
-                                            <input asp-for="@Model.OrderHeader.PhoneNumber" type="text" class="form-control" />
+                                            <input asp-for="@Model.OrderHeader.PhoneNumber" id="txtPhone" type="text" class="form-control" />
                                         </div>
                                     </div>
                                     <div class="row my-1">
@@ -115,7 +117,28 @@
                         </div>
                     </div>
                     <div class="card-footer">
+                        <div class="row">
+                            <div class="col-12 col-md-4 offset-md-8">
 
+                                @{
+                                    var OrderTotalForStrip = Model.OrderHeader.OrderTotal * 100;
+                                }
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                        data-key="@Stripe.Value.PublishableKey"
+                                        data-amount="@OrderTotalForStrip"
+                                        data-name="Spice Restaurant"
+                                        data-label="Place Order"
+                                        data-description="Good Food, Good Mood."
+                                        data-locale="auto"
+                                        data-allow-remember-me="false"
+                                        data-image="https://stripe.com/img/documentation/checkout/marketplace.png">
+                                </script>
+                                <script>
+                                    document.getElementsByClassName("stripe-button-el")[0].style.display = 'none';
+                                </script>
+                                <button type="submit" id="btnPlaceOrder" onclick="return validateInput()" value="Place Order" class="btn btn-success form-control">Place Order</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -130,8 +153,67 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.js"></script>
     <script>
         $(function () {
-            $(datepicker).datepicker({ minDate: 0, maxDate: "+1W" });
+            var minDt = 0;
+            var currentTime = getTimeFromCurrentDate();
+            var currentTimeHour = parseInt(currentTime.substring(0, currentTime.lastIndexOf(':')));
+            if (currentTimeHour >= 20) {
+                minDt = 1;
+            }
+
+            $(datepicker).datepicker({ minDate: minDt, maxDate: "+1W" });
             $(timepicker).timepicker({ 'minTime': '11.00 AM', 'maxTime': '9.00 PM',step: '5' });
         });
+
+        function setPickUpTime() {
+            var dateSelected = document.getElementById("datepicker").value;
+            var dt = new Date(dateSelected);
+            var today = new Date();
+            dt.setHours(0, 0, 0, 0);
+            if (dt > today) {
+                selectedTime = '11:00am';
+            } else {
+                selectedTime = getTimeFromCurrentDate();
+            }
+            $(timepicker).timepicker('option', 'minTime', selectedTime);
+        }
+
+        function getTimeFromCurrentDate() {
+            var curDT = new Date();
+            if (curDT.getHours() < 11) {
+                minTime = '12:00pm';
+            } else {
+                if (curDT.getMinutes() < 30) {
+                    minTime = (curDT.getHours() + 1).toString() + ':30pm';
+                } else {
+                    minTime = (curDT.getHours() + 2).toString() + ':00pm';
+                }
+            }
+            return minTime;
+        }
+        $('#datepicker').change(function () {
+            setPickUpTime();
+        });
+
+        function validateInput() {
+            var time = document.getElementById('timepicker').value;
+            var dt = document.getElementById('datepicker').value;
+            var name = document.getElementById('txtName').value;
+            var phone = document.getElementById('txtPhone').value;
+            if (time.toString() == '') {
+                alert("Please select pickup time");
+                return false;
+            } else if (dt.toString() == '') {
+                alert("Please select pickup date");
+                return false;
+            } else if (name.toString() == '') {
+                alert("Please enter the pickup name");
+                return false;
+            } else if (phone.toString() == '') {
+                alert("Please enter a phone number");
+                return false;
+            } else {
+                return true;
+            }
+        }
     </script>
 }
