--- a/Spice/Spice/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/Spice/Spice/Areas/Customer/Views/Cart/Summary.cshtml
@@ -63,7 +63,7 @@
                                             <label>Time:</label>
                                         </div>
                                         <div class="col-9">
-                                            <input asp-for="@Model.OrderHeader.PickupTime" id="timepicker" value="" type="text" class="form-control" />
+                                            <input asp-for="@Model.OrderHeader.PickUpTime" id="timepicker" value="" type="text" class="form-control" />
                                         </div>
                                     </div>
                                     <div class="row my-1">
