--- a/Spice/Spice/Areas/Customer/Views/Order/OrderHistory.cshtml
+++ b/Spice/Spice/Areas/Customer/Views/Order/OrderHistory.cshtml
@@ -25,7 +25,7 @@
                     <th>@Html.DisplayNameFor(m => m.OrderHeader.PickUpTime)</th>
                     <th>@Html.DisplayNameFor(m => m.OrderHeader.OrderTotal)</th>
                     <th>Total Items</th>
-                    
+                    <th></th>
                    
                 </tr>
                 @foreach (var item in Model)
@@ -49,7 +49,11 @@
                 <td>
                     @Html.DisplayFor(m => item.OrderDetails.Count)
                 </td>
-               
+                <td>
+                    <button type="submit" class="btn btn-success anchorDetail" data-id="@item.OrderHeader.Id" data-toggle="modal">
+                        <i class="far fa-list-alt"></i>  Details
+                    </button>
+                </td>
             </tr>
                 }
             </table>
@@ -61,3 +65,49 @@
     </div>
 </div>
 
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog-centered modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header bg-success text-light justify-content-center">
+                <h5 class="modal-title">Order Details</h5>
+            </div>
+            <div class="modal-body justify-content-center" id="myModalContent">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" style="width:20%" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@section scripts
+{ 
+<script>
+    var PostBackUrl = '/Customer/Order/GetOrderDetails';
+    $(function () {
+        $(".anchorDetail").click(function () {
+            var $buttonClicked = $(this);
+            var id = $buttonClicked.attr('data-id');
+
+            $.ajax({
+                type: "GET",
+                url: PostBackUrl,
+                contentType: "application/json; charset=utf-8",
+                data: { "Id": id },
+                cache: false,
+                datatype: "json",
+                success: function (data) {
+                    $('#myModalContent').html(data);
+                    $('#myModal').modal('show');
+                },
+                error: function () {
+                    alert("Dynamic content load failed")
+                }
+            })
+        })
+    })
+</script>
+   
+}
