--- a/Spice/Spice/Areas/Customer/Views/Order/OrderPickup.cshtml
+++ b/Spice/Spice/Areas/Customer/Views/Order/OrderPickup.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-    <form method="post">
+    <form method="get">
         <br />
         <br />
         <h2 class="text-info"> Orders ready for pickup :</h2>
@@ -31,7 +31,7 @@
                         </button>
                     </div>
                 </div>
-            
+
             </div>
             <br />
             <div>
@@ -101,7 +101,7 @@
                 }
             </div>
         </div>
-
+    </form>
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog-centered modal-dialog" role="document">
                 <div class="modal-content">
@@ -124,7 +124,7 @@
             </div>
         </div>
         
-    </form>
+    
 
 @section scripts
     {
